--- a/src/components/product-card/ProductCard.module.scss
+++ b/src/components/product-card/ProductCard.module.scss
@@ -30,7 +30,7 @@
     .def_price{
       margin-top: 10px;
       font-weight: 400;
-      text-decoration: line-through;
+      //text-decoration: line-through;
     }
   }
   &_delivery{
