--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -91,6 +91,8 @@
   display: grid;
   grid-template-columns: 350px 350px 350px;
   justify-content: space-between;
+  grid-template-areas:
+    ". empty .";
   @media (max-width: 1200px) {
     grid-template-columns: 300px 300px 300px;
   }
